      assigned in the generic function into method call environments
      before evaluating the method body. This makes method calls behave
      more like standard function calls and makes method code easier to
      analyze correctly. For now, attempts to use these variables in a
      method will signal an error; this will eventually be dropped.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item The \pkg{methods} package is more robust to not being attached to
      the search path.  More work needs to be done.

      \item \code{pairwise.t.test()} misbehaved when subgroups had 0 \abbr{DF}
      for variance, even with \code{pool.sd = TRUE}.  (\PR{18594} by
      Jack Berry).

      \item Probability distribution functions \code{[dpq]<distrib>(x, *)},
      but also \code{bessel[IKJY](x, .)} are now consistently preserving
      \code{attributes(x)} when \code{length(x) == 0}, e.g., for a
      \eqn{2 \times 0}{2 x 0} matrix, thanks to \I{Karolis Koncevičius}'
      report \PR{18509}.

      \item Group \dQuote{Summary} computations such as
      \code{sum(1:3, 4, na.rm = 5, NA, 7, na.rm = LL)} now give an error
      instead of either \code{17} or \code{NN} for \code{LL} true or false,
      as proposed by \I{Ivan Krylov} on the R-devel mailing list.  (This
      also means it is now an error to specify \code{na.rm} more than once.)

      \item \code{as.complex(x)} now returns \code{complex(real = x,
      imaginary = 0)} for \emph{all} numerical and logical \code{x},
      notably also for \code{NA} or \code{NA_integer_}.

      \item Directories are now omitted by
      \code{file.copy(,recursive = FALSE)} and in \code{file.append()}
      (\PR{17337}).

      \item \code{gsub()} and \code{sub()} are now more robust to integer
      overflow when reporting errors caused by too large input strings
      (\PR{18346}).

      \item Top-level handlers are now more robust to attempts to remove a
      handler whilst handlers are running (\PR{18508}).