@@ -128,3 +128,21 @@ is.R <- function() {
 
     TRUE
 }
+
+## Docu-deprecated in 4.3.0
+## Formally deprecated in 4.4.0
+
+## as.data.frame.raw <- function(x, row.names = NULL, optional = FALSE, ..., nm = deparse1(substitute(x))) {.....}
+## as.data.frame.logical ....
+## as.data.frame.integer ...
+## as.data.frame.numeric ..
+## as.data.frame.complex
+## as.data.frame.factor
+## as.data.frame.ordered
+## as.data.frame.Date
+## as.data.frame.difftime
+## as.data.frame.POSIXct
+## as.data.frame.noquote
+## as.data.frame.numeric_version
+##                vvvvv
+## >>> *end* of ./zzz.R : creating a modified version of as.data.frame.vector and assigning that in for() loop
