@@ -1,6 +1,6 @@
 % File src/library/base/man/Dates.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2022 R Core Team
+% Copyright 1995-2024 R Core Team
 % Distributed under GPL 2 or later
 
 \name{Dates}
@@ -14,7 +14,6 @@
 \alias{[<-.Date}
 \alias{length<-.Date}
 \alias{[[.Date}
-\alias{as.data.frame.Date}
 \alias{as.list.Date}
 \alias{c.Date}
 \alias{mean.Date}
